[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Mikhail <lissen.ku6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
